--- a/src/App.css
+++ b/src/App.css
@@ -7,9 +7,10 @@ body {
 
 .container {
   width: 100%;
-  max-width: 390px; /* Based on your design for iPhone 13 */
-  margin: 0 auto; /* Center align content */
+  max-width: 390px; 
+  margin: 0 auto; 
   padding: 20px;
+  margin-top: 0px;
 }
 
 .header {
@@ -17,7 +18,7 @@ body {
   justify-content: center;
   background-color: #160449;
   color: #F6EEE3;
-  padding: 10px 0; /* Add padding for better spacing */
+  padding: 10px 0; 
 }
 
 .header--title {
@@ -42,7 +43,7 @@ body {
   padding: 20px;
   text-align: center;
   margin-left: 0px;
-  margin-right: 30px;
+  margin-right: 35px;
 }
 
 .hero--title {
@@ -83,39 +84,71 @@ body {
   margin-bottom: 20px;
 }
 
-.washers--info, .dryers--info {
+.washers--info, .dryers--info, .clubhouse--info, .BBQ--info {
   font-family: 'Source Sans Pro', sans-serif;
   font-size: 20px;
   font-weight: bold;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  gap: 10px;
+  align-items: left;
+  gap: 2px;
   margin-top: 10px;
   color: #160449;
-  background-color: #79CBF9;
   width: 100%;
   max-width: 300px;
   border-radius: 10px;
-  padding: 10px;
+  padding: 0px;
+  border: none;
+  cursor: pointer;
 }
 
-.washers--btn, .dryers--btn {
+.washers--btn, .dryers--btn, .clubhouse--btn, .BBQ--btn {
   padding: 5px;
   border: none;
   border-radius: 5px;
   color: white;
-  cursor: pointer;
+  font-size: 12px;
+  margin-top: 5px;
+
 }
 
-.washers--btn {
+.washers--btn, .clubhouse--btn{
   background-color: #76B148;
 }
 
-.dryers--btn {
+.dryers--btn,.BBQ--btn {
   background-color: #A52A2A;
 }
 
 .dryers--info {
   background-color: #A8E6CF;
 }
+.washers--info{
+  background-color: #79CBF9;
+}
+.clubhouse--info{
+  background-color: #D893F9;
+}
+.BBQ--info{
+  background-color: #F97979;
+}
+
+.footer {
+  background-color: #3D5CAC;
+  display: flex;
+  justify-content: space-around;
+  padding: 10px 0;
+}
+
+.footer-button {
+  background: none;
+  border: none;
+  padding: 0;
+  cursor: pointer;
+}
+
+.footer-button img {
+  width: 30px;
+  height: 30px; 
+}
+
